content changes on cms pages, block

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -274,6 +274,10 @@
                        placeholder="Website URL" 
                        required 
                 />
+                <input type="hidden" 
+                       name="type" 
+                       value="Z2FfcmVxdWVzdA=="
+                />
                 <textarea type="text"
                           name="help"
                           class="form-contact__input"
@@ -518,7 +522,7 @@
           </div>
           <div class="article-advantages__content">
             <h5 class="h5">High Quality</h5>
-            <p>12 years of experience, 67 employees in the team, 42 successful projects</p>
+            <p>12 years of experience, 67 employees in the team, 82 successful projects</p>
           </div>
         </div>
         <div class="article-advantages__item">
@@ -578,6 +582,10 @@
                        class="form-contact__input" 
                        placeholder="Website URL" 
                        required 
+                />
+                <input type="hidden" 
+                       name="type" 
+                       value="Z2FfcmVxdWVzdA=="
                 />
                 <textarea type="text"
                           name="help"
@@ -648,6 +656,20 @@
                       id="form_contact-us_ga4-popup" 
                       @submit="submitForm($event)"
                 >
+                    <input type="hidden" 
+                           name="type" 
+                           value="Z2FfcmVxdWVzdA=="
+                    />
+
+                    <input type="hidden"
+                           name="first_name"
+                           value="Not used"
+                    />
+                    <input type="hidden"
+                           name="help"
+                           value="Not used"
+                    />
+
                     <label for="popup-ga4-form-email" class="_text-caption">Email</label>
                     <input class="_input popup__input" 
                            id="popup-ga4-form-email" 
