changes on homepage, added new map on company page, move old one to careers page

--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -84,7 +84,7 @@
         font-weight: 600;
         font-style: normal;
         font-display: block;
-      }
+      } 
       table {
         color: #303030;
         table-layout: fixed;
@@ -293,12 +293,12 @@
       .section-corporate-upd__table--mob {
         display: none !important;
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .header__logo img {
           width: 110px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         table tr td {
           padding: 0 16px !important;
         }
@@ -306,25 +306,25 @@
           padding: 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         table tr td.section-intro {
           padding: 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .header__logo,
         .section-intro__subtitle span {
           display: inline-block !important;
           padding: 16px 16px 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro {
           padding-top: 16px !important;
           background-image: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro__title {
           font-size: 22px !important;
           line-height: 30px !important;
@@ -332,7 +332,7 @@
           padding: 0 16px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro__subtitle {
           font-size: 16px !important;
           line-height: 24px !important;
@@ -346,35 +346,35 @@
           margin-left: auto !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro__body {
           max-width: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro-2 {
           background-image: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro-2__title {
           max-width: none !important;
           margin-top: 20px !important;
           text-align: left !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro-2__title br {
           display: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-intro-2__button {
           width: 100% !important;
           box-sizing: border-box !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-stories__title {
           font-size: 20px !important;
           line-height: 28px !important;
@@ -382,18 +382,18 @@
           margin-bottom: 24px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-stories__text {
           font-size: 14px !important;
           line-height: 20px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-stories__item {
           padding: 20px 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-updates__title {
           font-size: 20px !important;
           line-height: 28px !important;
@@ -401,36 +401,36 @@
           margin-bottom: 24px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-corporate-upd__image {
           position: static !important;
           display: block !important;
           margin-left: auto !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-corporate-upd__text {
           padding-bottom: 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .news-item__title {
           font-size: 14px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-next-step__title {
           text-transform: none !important;
           font-size: 20px !important;
           line-height: 28px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-corporate-upd__table {
           display: block !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-corporate-upd__table-bottom--mobile > div {
           display: block !important ;
         }
@@ -438,12 +438,12 @@
           display: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .footer_body {
           padding: 24px 0 !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .footer a {
           color: #fff !important;
           transition: all 0.4s ease-in-out !important;
@@ -451,24 +451,24 @@
           font-size: 12px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .follow-us-text {
           font-size: 12px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .updates-square {
           width: 100% !important;
           border-right: 1px solid #949494 !important;
           padding: 33px 43px 7px 16px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .updates-square__number {
           margin-right: 24px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .updates-square__number + p {
           margin-top: 0 !important;
           max-width: 132px !important;
@@ -485,7 +485,7 @@
           margin-top: 10px !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .updates-square--mobile {
           display: block !important;
         }
@@ -493,14 +493,14 @@
           display: none !important;
         }
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 992px) {
         .section-corporate-upd__table--dt {
           display: none !important;
         }
         .section-corporate-upd__table--mob {
           display: block !important;
         }
-        .updates-square.updates-square--mobile{
+        .updates-square.updates-square--mobile {
           display: block !important;
         }
       }
@@ -1038,7 +1038,10 @@
                   >
                     <tr>
                       <td>
-                        <div class="updates-square" style="border: 1px solid #949494; border-right: 0">
+                        <div
+                          class="updates-square"
+                          style="border: 1px solid #949494; border-right: 0; border-top: 1px solid #949494 !important"
+                        >
                           <div class="updates-square__number">
                             <span>4</span>
                             <img
