--- a/files for admin/CMS Pages/content/cookie-policy.html
+++ b/files for admin/CMS Pages/content/cookie-policy.html
@@ -22,6 +22,7 @@
         </div>
 
         <div class="cookie-policy__content cookie-content">
+          <!-- What are cookies? -->
           <section class="cookie-policy__section">
             <h4 class="cookie-content__title content-title font-semibold h4">What are cookies?</h4>
             <p class="_text-article">
@@ -39,42 +40,7 @@
             </p>
           </section>
 
-          <!-- <section class="cookie-policy__section">
-            <h4 class="cookie-content__title content-title font-semibold h4">How do we use the information?</h4>
-            <p class="_text-article">The data we collect, we use in one of the following ways:</p>
-            <ol class="_list-numbered">
-              <li class="font-regular">
-                <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  To perzonalize user experience
-                </p>
-              </li>
-              <li class="font-regular">
-                <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  To improve our website
-                </p>
-              </li>
-              <li class="font-regular">
-                <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  To improve our customer service
-                </p>
-              </li>
-              <li class="font-regular">
-                <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  To undertake transactions
-                </p>
-              </li>
-              <li class="font-regular">
-                <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  To send periodic emails
-                </p>
-              </li>
-            </ol>
-            <p class="_text-article">
-              The information we collect will not be sold, exchanged, transferred, or given to any other company without
-              your consent – except where it is necessary to provide the product or service you have requested.
-            </p>
-          </section> -->
-
+          <!-- Why do we use cookies? -->
           <section class="cookie-policy__section">
             <h4 class="cookie-content__title content-title font-semibold h4">Why do we use cookies?</h4>
             <p class="_text-article">
