added anchors to table of content on privacy-policy page

--- a/files for admin/CMS Pages/content/privacy-policy.html
+++ b/files for admin/CMS Pages/content/privacy-policy.html
@@ -138,77 +138,77 @@
             <ol class="_list-numbered">
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">WHAT INFORMATION DO WE COLLECT? </a>
+                  <a href="№section-1" class="">WHAT INFORMATION DO WE COLLECT? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">HOW DO WE PROCESS YOUR INFORMATION? </a>
+                  <a href="№section-2" class="">HOW DO WE PROCESS YOUR INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION? </a>
+                  <a href="№section-3" class="">WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION? </a>
+                  <a href="№section-4" class="">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES? </a>
+                  <a href="№section-5" class="">DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY? </a>
+                  <a href="№section-6" class="">IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">HOW LONG DO WE KEEP YOUR INFORMATION? </a>
+                  <a href="№section-7" class="">HOW LONG DO WE KEEP YOUR INFORMATION? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">HOW DO WE KEEP YOUR INFORMATION SAFE? </a>
+                  <a href="№section-8" class="">HOW DO WE KEEP YOUR INFORMATION SAFE? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">DO WE COLLECT INFORMATION FROM MINORS? </a>
+                  <a href="№section-9" class="">DO WE COLLECT INFORMATION FROM MINORS? </a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">WHAT ARE YOUR PRIVACY RIGHTS?</a>
+                  <a href="№section-10" class="">WHAT ARE YOUR PRIVACY RIGHTS?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">CONTROLS FOR DO-NOT-TRACK FEATURES</a>
+                  <a href="№section-11" class="">CONTROLS FOR DO-NOT-TRACK FEATURES</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
+                  <a href="№section-12" class="">DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">DO WE MAKE UPDATES TO THIS NOTICE?</a>
+                  <a href="№section-13" class="">DO WE MAKE UPDATES TO THIS NOTICE?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a>
+                  <a href="№section-14" class="">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a>
                 </p>
               </li>
               <li class="font-regular">
                 <p class="_list-numbered__legend font-regular _text-article _text-article--sm">
-                  <a href="" class="">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a>
+                  <a href="№section-15" class="">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a>
                 </p>
               </li>
               <li class="font-regular">
