added x-on:input to form inputs on ga4 service page

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -135,18 +135,21 @@
                    class="form-contact__input" 
                    placeholder="Name" 
                    required 
+                   x-on:input="validate($el, false)"
             />
             <input type="email" 
                    name="email" 
                    class="form-contact__input validate-email" 
                    placeholder="Email" 
                    required 
+                   x-on:input="validate($el, false)"
             />
             <input type="text" 
                    name="url" 
                    class="form-contact__input" 
                    placeholder="Website URL" 
                    required 
+                   x-on:input="validate($el, false)"
             />
             <input type="hidden" 
                     name="type" 
@@ -261,18 +264,21 @@
                        class="form-contact__input" 
                        placeholder="Name" 
                        required 
+                       x-on:input="validate($el, false)"
                 />
                 <input type="email"
                        name="email"
                        class="form-contact__input validate-email"
                        placeholder="Email"
                        required
+                       x-on:input="validate($el, false)"
                 />
                 <input type="text" 
                        name="url" 
                        class="form-contact__input" 
                        placeholder="Website URL" 
                        required 
+                       x-on:input="validate($el, false)"
                 />
                 <input type="hidden" 
                        name="type" 
@@ -446,18 +452,21 @@
                    class="form-contact__input" 
                    placeholder="Name" 
                    required 
+                   x-on:input="validate($el, false)"
                 />
                 <input type="email" 
                    name="email" 
                    class="form-contact__input validate-email" 
                    placeholder="Email" 
                    required 
+                   x-on:input="validate($el, false)"
                 />
                 <input type="text" 
                    name="url" 
                    class="form-contact__input" 
                    placeholder="Website URL" 
                    required 
+                   x-on:input="validate($el, false)"
                 />
                 <input type="hidden" 
                     name="type" 
@@ -570,18 +579,21 @@
                        class="form-contact__input" 
                        placeholder="Name" 
                        required 
+                       x-on:input="validate($el, false)"
                 />
                 <input type="email"
                        name="email"
                        class="form-contact__input validate-email"
                        placeholder="Email"
                        required
+                       x-on:input="validate($el, false)"
                 />
                 <input type="text" 
                        name="url" 
                        class="form-contact__input" 
                        placeholder="Website URL" 
                        required 
+                       x-on:input="validate($el, false)"
                 />
                 <input type="hidden" 
                        name="type" 
