added itemprops to images, changed alt attrs for images

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -29,7 +29,11 @@
     <div class="grid-col"></div>
   </section>
   <div class="article__image">
-    <img loading="eager" src="{{view url="Mirasvit_Blog::images/article/gtm/banner.jpg"}}" alt="Implementation GTM">
+    <img
+      loading="eager"
+      src="{{view url='Mirasvit_Blog::images/article/gtm/banner.jpg'}}"
+      alt="IMPLEMENTATION GOOGLE ANALYTICS 4 ON MAGENTO 2 WITH GTM service - main image"
+    />
   </div>
   <section class="article__section _article-page-grid">
     <div class="grid-col"></div>
@@ -55,12 +59,18 @@
           </p>
         </div>
         <div class="article-gtm__image-container">
-          <img src="{{view url="Mirasvit_Blog::images/article/gtm/trafic.png"}}" alt="trafic-phone">
+          <img
+            src="{{view url='Mirasvit_Blog::images/article/gtm/trafic.png'}}"
+            alt="Why should You upgrade to Google Analytics 4, illustration,seo,traffic"
+          />
         </div>
       </div>
       <div class="article__row">
         <div class="article-gtm__image-container">
-          <img src="{{view url="Mirasvit_Blog::images/article/gtm/statistic.png"}}" alt="statistic">
+          <img
+            src="{{view url='Mirasvit_Blog::images/article/gtm/statistic.png'}}"
+            alt="Google Analytics 4 is based on events and parameters and designed to track users interactions with your product, illustration"
+          />
         </div>
         <div class="article__flex-content">
           <p class="article__text article__image-text">
@@ -188,11 +198,15 @@
         </form>
       </div>
       <div class="article-form-wide__image">
-        <img src="{{view url="Mirasvit_Blog::images/article/gtm/cart.png"}}" alt="cart">
+        <img src="{{view url='Mirasvit_Blog::images/article/gtm/cart.png'}}" alt="Shopping cart illustration" />
       </div>
     </div>
     <div class="success-message" x-show="showSuccess" :class="{'show' : showSuccess}">
-      <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket" >
+      <img
+        loading="lazy"
+        src="{{view url='Mirasvit_Blog::images/article/gtm/rocket.gif'}}"
+        alt="Gif with a flying rocket indicating the successful process of sending the form"
+      />
       <h5 class="h5">Thank you!</h5>
       <h6 class="h6">We will contact you shortly.</h6>
       <button
@@ -316,7 +330,11 @@
           </div>
         </div>
         <div class="success-message" x-show="showSuccess" :class="{'show' : showSuccess}">
-          <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket" />
+          <img
+            loading="lazy"
+            src="{{view url='Mirasvit_Blog::images/article/gtm/rocket-black.gif'}}"
+            alt="Gif with a flying rocket indicating the successful process of sending the form"
+          />
           <h5 class="h5">Thank you!</h5>
           <h6 class="h6">We will contact you shortly.</h6>
           <button class="form-contact__submit footer__button _button ga-success-form" @click="toggleSuccessMessage()">
@@ -425,7 +443,7 @@
   >
     <div class="article-form-wide__row" x-show="showForm">
       <div class="article-form-wide__image">
-        <img src="{{view url="Mirasvit_Blog::images/article/gtm/gears.png"}}" alt="gears">
+        <img src="{{view url='Mirasvit_Blog::images/article/gtm/gears.png'}}" alt="Gears illustration" />
       </div>
       <div class="article-form-wide__content">
         <h6 class="h6">
@@ -496,7 +514,11 @@
       </div>
     </div>
     <div class="success-message" x-show="showSuccess" :class="{'show' : showSuccess}">
-      <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket" >
+      <img
+        loading="lazy"
+        src="{{view url='Mirasvit_Blog::images/article/gtm/rocket.gif'}}"
+        alt="Gif with a flying rocket indicating the successful process of sending the form"
+      />
       <h5 class="h5">Thank you!</h5>
       <h6 class="h6">We will contact you shortly.</h6>
       <button
@@ -520,7 +542,10 @@
         <h6 class="h6">We work hard every day to make life of our clients better and happier</h6>
         <div class="article-advantages__item">
           <div class="article-advantages__image">
-            <img src="{{view url="Mirasvit_Blog::images/article/gtm/star.svg"}}" alt="star">
+            <img
+              src="{{view url='Mirasvit_Blog::images/article/gtm/star.svg'}}"
+              alt="Star illustration, High Quality"
+            />
           </div>
           <div class="article-advantages__content">
             <h5 class="h5">High Quality</h5>
@@ -529,7 +554,10 @@
         </div>
         <div class="article-advantages__item">
           <div class="article-advantages__image">
-            <img src="{{view url="Mirasvit_Blog::images/article/gtm/chat.svg"}}" alt="star">
+            <img
+              src="{{view url='Mirasvit_Blog::images/article/gtm/chat.svg'}}"
+              alt="Messages illustration, Good Support"
+            />
           </div>
           <div class="article-advantages__content">
             <h5 class="h5">Good Support</h5>
@@ -621,7 +649,11 @@
           </div>
         </div>
         <div class="success-message" x-show="showSuccess" :class="{'show' : showSuccess}">
-          <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket" />
+          <img
+            loading="lazy"
+            src="{{view url='Mirasvit_Blog::images/article/gtm/rocket-black.gif'}}"
+            alt="Gif with a flying rocket indicating the successful process of sending the form"
+          />
           <h5 class="h5">Thank you!</h5>
           <h6 class="h6">We will contact you shortly.</h6>
           <button class="_button form-contact__submit ga-success-form" @click="toggleSuccessMessage()">
@@ -694,7 +726,11 @@
           </div>
 
           <div class="success-message" x-show="showSuccess" :class="{'show' : showSuccess}">
-            <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket" />
+            <img
+              loading="lazy"
+              src="{{view url='Mirasvit_Blog::images/article/gtm/rocket-black.gif'}}"
+              alt="Gif with a flying rocket indicating the successful process of sending the form"
+            />
             <h5 class="h5">Thank you!</h5>
             <h6 class="h6">We will contact you shortly.</h6>
             <button class="_button form-contact__submit ga-success-form" @click="toggleSuccessMessage()">
